# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(test easy/test.cpp)
add_executable(2.5 easy/2.5.cpp)
add_executable(3.4 easy/3.4.cpp)
add_executable(6.6 easy/6.6.cpp)
add_executable(7.1 easy/7.1.cpp)
add_executable(8.1 easy/8.1.cpp)
add_executable(8.3 easy/8.3.cpp)