# cmake_minimum_required(VERSION <specify CMake version here>)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(test_sizeof easy/test_sizeof.cpp)
add_executable(test_write_read easy/test_write_read.cpp)
add_executable(2.5 easy/2.5.cpp)
add_executable(3.4 easy/3.4.cpp)
add_executable(6.6 easy/6.6.cpp)
add_executable(7.1 easy/7.1.cpp)
add_executable(8.1 easy/8.1.cpp)
add_executable(8.3 easy/8.3.cpp)
add_executable(8.5 easy/8.5.cpp)
add_executable(10.1 easy/10.1.cpp)
add_executable(11.1 easy/11.1.cpp)
add_executable(11.5 easy/11.5.cpp)
add_executable(12.2 easy/12.2.cpp)
add_executable(16.2 easy/16.2.cpp)
add_executable(19.4 easy/19.4.cpp)
add_executable(21.2 easy/21.2.cpp)
add_executable(23.2 easy/23.2.cpp)